--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,4 @@
-html {
-}
+@import url("https://fonts.googleapis.com/css?family=Cousine:400,700&display=swap");
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
