--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,8 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Cousine:400,700&display=swap");
 body {
   margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   font-family: "JT Marnie", sans-serif;
   font-size: 17px;
   line-height: 1.5em;
@@ -15,11 +13,13 @@ h4,
 h4,
 h6 {
   margin: 0 0 1em 0;
-  letter-spacing: -0.001em;
 }
 h1 {
   font-size: 60px;
   line-height: 1em;
+}
+a {
+  color: black;
 }
 
 @font-face {
